--- a/_i18n/en/_posts/2019-11-25-協作會議-公私磨合的「找出核心問題」.md
+++ b/_i18n/en/_posts/2019-11-25-協作會議-公私磨合的「找出核心問題」.md
@@ -1,51 +1,58 @@
 ---
   layout: "post"
-  title: "Collaborative meetings, public and private \"finding core issues\""
-  excerpt: "The government is not unilaterally accepting the role of the proposal, so the collaborative meeting has a unique process of \"finding the core problem.\""
+  title: "Collaboration meeting: “Core Question Discovery” across sectors"
+  excerpt: "The government is not acting unilaterally to accept the demand for proposals, so collaborative meetings have a unique “core question discovery” process."
   image: "https://talk.pdis.nat.gov.tw/uploads/default/original/2X/3/30f0a1f9648d12115f8519f870fb84b9489642cb.jpeg"
-  author: "許恩恩"
+  author: "En-En Hsu"
   category: "blog"
   tags: 
-    - "開放政府"
+    - "Open Government"
 ---
 
+### Agenda setting or core question?
 
-### Agenda setting or core issues? 
+"Open Government-Collaborative Meeting", as a type of policy discussion for citizen participation, has a similar but not the same idea as a regular deliberative meetings, called "finding the core questions."
 
-"Open Government-Collaboration Conference" as a form of policy discussion for citizen participation, there is a similar but not identical part of the general review conference, called "finding core issues." 
+This link may be called "agenda setting" in the design of civic participation or deliberative processes. "Double Diamond", also known as "confirmation problem definition", is explained by PDIS as a feature of collaboration meeting: starting from the concept of service design, hoping that participants can try to use "How Might We?" Thinking as a question or challenge and start a discussion.
 
-This link may be called "topic setting" in the design of citizen participation or deliberative processes. The "Double Diamond" that explains the collaborative meeting in PDIS is also called "confirmation of problem definition": from the concept of service design, it is hoped that participants can try to use "How Might We?" as a question and challenge. discuss. 
+No matter what these details are called, the things they are doing are actually very similar, hoping to allow participants to discuss under a focused problem awareness.
 
-No matter what these details are called, the things they are doing are actually similar, and they all hope to allow participants to discuss under a focused problem. 
+In the reading of the [Guide to Deliberative Democracy](https://www.facebook.com/notes/%E6%9E%97%E5%9C%8B%E6%98%8E/%E5%A4%9A%E5%85%83%E5%AF%A9%E8%AD%B0%E8%88%87%E5%85%AC%E6%B0%91%E7%A4%BE%E6%9C%83%E5%AF%A9%E8%AD%B0%E6%B0%91%E4%B8%BB%E6%8C%87%E5%8D%97%E5%B0%8E%E8%AE%80-%E6%9E%97%E5%9C%8B%E6%98%8E/442060615817584/), when collating the differences between various review forums, Mr. Lin Guoming mentioned that the "agenda setting" is oriented towards: "some review modes, such as citizen consensus at the conference, the participants can set the discussion topics themselves, let the participants identify the problem and find solutions; some can only discuss the topics provided by the organizer such as a citizen jury, or from a set options to express opinions such as deliberative polls. "
 
-[In the Guide to Reviewing Democracy Guide](https://www.facebook.com/notes/%e6%9e%97%e5%9c%8b%e6%98%8e/%e5 %a4%9a%e5%85%83%e5%af%a9%e8%ad%b0%e8%88%87%e5%85%ac%e6%b0%91%e7%a4%be%e6%9c %83%e5%af%a9%e8%ad%b0%e6%b0%91%e4%b8%bb%e6%8c%87%e5%8d%97%e5%b0%8e%e8%ae%80 -%e6%9e%97%e5%9c%8b%e6%98%8e/442060615817584/) When Lin Guoming organized the differences in various review forums, he mentioned that "the agenda setting" is oriented: "Some review models, such as citizens In the consensus meeting, participants can develop their own discussion topics, allowing participants to identify the problem and seek solutions. Some can only be discussed from the topics provided by the organizer, such as a citizen jury, or from a set. In the options to express opinions, such as deliberative polls."
+From this we can see that the agenda is set up with the two ideals of "open up for the common development of the people" and "the organizers have set up in advance", and collaborative meetings can hardly be classified as either. The reason is that most of the launch of the collaborative meeting comes from the public's proposal, that is, from the "idea" of the National Development Association's public policy network participation platform (Join platform). The current mechanism, in addition to the ministry's own proposals, is usually the National Development Council that first counts the proposals that have reached the threshold for joint signing, and then enters the monthly meeting of the PO (Participation Officer, Open Government Contact Person) to vote and select the topics for the collaborative meeting. The authority responsible for this issue will be the host of the collaborative meeting.
 
-It can be seen that the agenda has two concepts: "opening the public and setting up" and "pre-set the organizer", and the collaborative meeting is difficult to return. The class is any kind. The reason is that most of the start-up of collaborative meetings comes from the public proposal, which is generated from the “pushing point” of the China Development Association's public policy network participation platform (Join platform). In addition to the Ministry's own proposal, the current mechanism is usually a proposal by the National Development Council to take the opportunity to reach the threshold of the company, and then enter the PO (Partication Officer, Open Government Contact) monthly meeting to vote, select the topic of the collaborative meeting, and The competent authority for this issue serves as the organizer of the collaborative meeting. Is 
+### Is it for the "Public" or "Government” to decide?
 
-### "People" or "Government"? Since the source of the proposal starts from the private sector, the general direction of the issue is of course highly relevant to the content of the proposal, but the proposal comes from the public. The executive is holding the meeting, who is going to do the "topic setting" and "finding the core problem" ? 
+Since the source of the proposal originates from the people, the general direction of the issue is of course highly related to the content of the proposal, but the proposal comes from the people. The executive organs of the meeting are held.
 
-Actually, according to the design process mentioned above for "Double Diamond", the first half of the collaborative meeting usually begins with a divergent issue inventory, and then summarizes the "core issues" that the participants have shared. Therefore, ideally, this process is at the scene of a collaborative meeting, which is jointly drafted by government agencies and the participating people. For example, the 4th case of the Collaborative Conference: "Improving the concept of driving for all people, to improve the quality of the driving environment of the whole people, and to lift the slow lane of the forbidden machine. The two-stage left turn was lifted. On the day of the meeting, the participants raised their brains and brainstormed the big issues of the proposal, such as the proportion of driving safety and traffic, and the unclear sign of the two-stage Sub-topics such as poor design, and a discussion on the basic consensus. However, there are also many collaborative conferences that emphasize the “finding core issues” during the preparatory period and make adjustments to the agenda before the formal meeting. Taking the collaborative meeting in the second half of 2019 as an example, the process of "problem setting" or "finding the core problem" actually takes place in the preparatory process of the front end, such as "work meeting" and "pre-conference". . These preparatory processes have public verbatim records that present the discussion context at the meeting. The most important procedure for seeing the pre-conference meeting of the collaborative meeting from many records is that the PDIS team and the main co-organizers confirm the "core issues" discussed on the day of the collaborative meeting. Usually, the "title" of the popular proposal is not the same as the "core issue." 
+In fact, according to the design process of the "Double Diamond" mentioned above, in the first half of a collaborative meeting, a divergent issue inventory will usually be performed first, and then the "core questions" defined by participants expect will be summarized. So ideally, this process is at the scene of the collaboration meeting, which was jointly formulated by government agencies and the participating people, such as Case 4 of the collaboration meeting: "Promote the concept of universal driving, improve the quality of the driving environment of the entire public, and lift the slow lane of the embargo machine. "Release the forced two-step left turn", on the day of the meeting, through the brainstorming of the participants, the major issues of the proposal were condensed, such as: the proportion of driving safety and traffic smoothness, because the two-step pending transition was unclear or sub-topics such as poor design, and extended discussions on the basis of consensus.
 
-Putting the setting of the "core issue" from the meeting to the pre-preparation period seems to reflect that the organizer has the power to set the agenda before the meeting. Why do you need such intervention? Although the ideal of collaborative meetings is to follow the shape of "Double Diamond," it is actually difficult to concentrate all the links in a half-day period. Therefore, the Collaborative Conference developed the "pre-existing interview" and "writing the topic manual". The first work of the first Diamond was done as much as possible, which is equivalent to the mentality map before the meeting. The inventory is complete. I hope that at the meeting, I can focus on the "core issues" in the context of information synchronization and confirmation of disputes. 
+However, there are also many collaborative meetings that emphasized the “find the core questions” during the preparatory period, and adjusted the agenda before the formal meeting. Taking the collaborative conference in the second half of 2019 as an example, the so-called "issue setting" link, or the process of "finding the core questions", actually takes place in more advanced preparation processes, such as the "work conference" and the "pre-conference meetings”. These preparatory processes have public verbatim records that present the context of discussions at the conference site. From the many records, the most important process of the pre-conference meeting of the collaborative meeting is the PDIS team and the main co-organizer confirm the "core questions" discussed on the day of the collaborative meeting. And usually the title of a public proposal is not the same as the "core question."
 
-### My core is not your core
+Pulling the setting of "core questions" from the conference to the early stages of preparations seems to reflect that the organizer has "the power to set the agenda" before the conference. Why would such intervention be needed? Although the ideal of a collaborative meeting is to follow the shape of "Double Diamond", it is actually difficult to condense all the links in one and a half days. As a result, the collaborative meeting developed links such as "ex-ante interviews" and "writing topic manuals". First, the work of the first Diamond should be completed as much as possible, which is equivalent to using mental maps to try to face various issues and issues as much as possible. Inventory is complete. I hope that at the conference site, we can focus on "core questions" for discussion under the situation of information synchronization and confirmation of disputes.
 
- As far as my current limited observations are concerned, live discussions are not always able to follow the "core issues" that the PDIS team and the organizers expect, participants It is still possible to emphasize the focus of his original intention. However, the tool list designed with the core problem and the small table leader during the group discussion can really make the scope and focus of the discussion more biased towards the "core problem" that the organizer expects. This is a good or bad practice, and what to do depends on the positioning of the collaborative meeting. 
+### My core question is not your core question
 
-No matter where you develop your core questions, you may have a situation where "my core is not your core." For example, the proposal on the Join platform in 2018 (the 38th case of the Collaborative Conference): "Improve the commemorative day and the implementation of the festival in paragraph 5, paragraph 2, paragraph 4, add the fifth paragraph to add police and firefighters to In the process of the Collaborative Meeting, the Police Day and the Fire Festival Day have issued a "return problem, starting from the cause of overwork". Although we can claim that this is the "core of the problem", we should broadly find and find out The "fundamental" solution, but the proponents believe that ["the meeting should not discuss the issue of overwork, should focus on the feasibility of a day off, let the grassroots staff feel a sense."](https://pdis.nat. gov.tw/zh-tw/blog/%e8%ad%a6%e6%b6%88%e4%bc%91%e5%81%87%e5%8f%af%e8%a1%8c%e5%97 %8e-%e5%8d%94%e4%bd%9c%e6%9c%83%e8%ad%b0%e7%99%bc%e6%83%b3%e7%9b%b8%e9%97% 9c%e9%85%8d%e5%a5%97/) shows that he still hopes that his proposed solution is the focus of the focused discussion. 
+Based on my limited observations at the moment, the on-site discussions are not always in the direction of the "core questions" expected by the PDIS team and the organizer, and the participant may still emphasize the points he originally intended. However, the tool list designed with the core questions and chaired by the small table leader during the group discussions can indeed make the scope and focus of the discussions more biased toward the "core questions" expected by the organizer. There are good and bad ways to do this, and what to do depends on the positioning of the collaborative meeting.
 
-### The core issue is not rigid 
+No matter where the core questions are formulated, there may be situations where "my core is not your core". For example, the proposal on the Join platform in 2018 (Collaborative Meeting No. 38): "Revised the implementation of the memorial day and festival in Article 5, section 2 and paragraph 4, adding paragraph 5 that police, firefighters in during the collaborative meeting of the Police Festival and Fire Festival, we issued the direction of "regression problems and analysis from the causes of overwork". Although we can claim that this is the "core of the problem", we should extensively check and find out a "fundamental" solution, but the proponent believes that ["the conference should not discuss the issue of overwork, but should focus on the feasibility of a day off as a tangible benefit for the frontline police."](https://pdis.nat.gov.tw/zh-TW/blog/%E8%AD%A6%E6%B6%88%E4%BC%91%E5%81%87%E5%8F%AF%E8%A1%8C%E5%97%8E-%E5%8D%94%E4%BD%9C%E6%9C%83%E8%AD%B0%E7%99%BC%E6%83%B3%E7%9B%B8%E9%97%9C%E9%85%8D%E5%A5%97/), which shows that he still hopes that his proposed solution is the focus of this focused discussion.
 
-The part of the collaborative issue seems to be "core problem" first set, but at the site of the collaborative meeting, members of the PDIS team will play in the collaborative meeting The function of hosting and recording, if it is found that the participants' motivation for discussion is not on the core problem originally set, will also adjust the core problem immediately according to the situation of the mental map and the content of the live speech. Before the collaborative meeting was held, the ministry also conducted interviews and data collection based on the problem awareness of the proposal. The live and live broadcast of the collaborative meeting will also use the original title of the proposal as the name of the meeting. 
+### Core questions are not rigid
 
- On the day of the collaborative meeting, the Informed session before the discussion begins, the first report of the sponsor will be arranged to remind all participants of the starting point of the collaborative meeting. The "core problem" set by the data collection and consolidation in advance is the driving force for the organisers to guide, but it is not necessarily the case that each case can be carried out in the direction of the pre-judgment. Trying to balance the "core issues" that different stakeholders care about is the most difficult and important task for the team. 
+Some collaboration issues seem to be "core questions” have been “set” first, but at the scene of the collaboration meeting, members of the PDIS team will play the role of hosting and recording during the meeting. The core questions will also be adjusted in real time depending on the state of mind map inventory and the content of live speeches. Before the collaborative meeting was held, the ministry also conducted interviews and data collection based on the problem awareness of the proposal, and the original title of the proposal was used as the name of the meeting at the scene and live broadcast of the collaborative meeting.
 
-### Significance of Citizen Participation
+On the day of the collaboration meeting, before the discussion begins, the step will arrange the first report of the sponsor to remind all participants of the starting point of the collaboration meeting. The "core questions" set through the collection and consolidation of data in advance are the driving force that the organizers hope to guide, but not every case can be carried out at the scene as expected. Trying to balance the "core questions" that different stakeholders care about is the hardest and most important task for the host team.
 
- Not only the 38th case of the above-mentioned collaborative meeting has the process of “returning more structural problems, more extensive inventory and based on factual information, and finding the core of the problem”. In the case of collaborative meetings, there are opinions or solutions proposed from the public, and the retrospective process of exploring the core issues to the more advanced structural system. From the perspective of the public, it seems that the government does not directly correspond to his needs. However, from the perspective of the executive authorities, "citizen participation" does not mean that the executive authorities should accept 100% of the public's recommendations. After all, the 5,000 people attached to the Join platform proposal do not necessarily agree with every point of the proposal, but only agree with the problems and difficulties that are pointed out behind them. If the collaborative meeting can really become a routine operation mechanism, encourage more administrative agencies to take the initiative to organize meetings to convene multiple stakeholders and promote communication and dialogue. The agenda must consider the necessity of the position and opinions of the main and co-organizers. It will be greatly improved. Moreover, the administrative organs related to the issue are equivalent to the natural stakeholders. 
+### Meaning of civil participation
 
-The PDIS team encourages the executive to first expose the scope of the policy's feasible solution. In this way, it is more likely to deal with the issue and achieve the desired effect. Since the position and understanding of the policy and the level of familiarity between the executive authorities and the public are different, it is necessary to find the direction of the agenda that is considered and pragmatic. Because the proposal is too far away from reality, or it can only be implemented according to the people's literal suggestions, it may face difficulties in the short term, and the scope of the solution is not helpful for improving the issue itself. In conclusion, the PDIS team implements the “open government” business. In the process of implementing the open government, we must pay attention to the original intention of the public proposal, except that it is relatively neutral in the process of hosting (relative to the main department). Role, but also must stand in the perspective of the executive, let the public sector think that "citizen participation" is not so far away from them, "collaboration meeting" is a platform for mutual understanding, not just unilateral, passive acceptance of demand Roles. 
+Not only does the case 38 of the above-mentioned collaboration meeting have a process of “pulling back higher-level structural problems, taking a broader inventory, and finding out the core of the problem based on factual information,” many cases of holding collaboration meetings have opinions or solutions from the public, going back to the higher structure system to explore the retrospective process of core questions.
 
-Break out of the proposal's people and the government's dichotomy. If the results of the collaborative meeting are expected to become the direction of policy participation, the internal position of the organization will be aligned and the scope of the solution will be the necessary process, by opening the space and The dialogue among the people and the stimulation of more constructive opinions and solutions are the results that the collaborative meeting hopes to achieve. 
+From the perspective of the people, it seems that the government has not directly responded to their need. However, from the perspective of the administrative departments, "civic participation" does not mean that the administrative departments must accept 100% of the public's suggestions. After all, the 5,000 people attached to the Join platform proposal do not necessarily agree with every point of the proposal, only the problems and dilemmas behind it. If a collaborative conference can truly become a routine and normal operation mechanism, and encourage more administrative agencies to take the initiative to organize a conference of convening multiple stakeholders and promoting communication and dialog, the importance of taking into account the position and opinions of the host and co-organizer when setting agendas are greatly enhanced. Moreover, the administrative departments related to the issue are equivalent to the stakeholders.
 
-Started the space for discussion from the popular proposal, and then let the executives think about the setting of a meeting until the on-the-spot opinion was reached. The public and private sector participants discussed and together they were not satisfied but could not The accepted process of dissolving is a fun and unique aspect of collaborative meetings as one of the "citizen participation" or "deliberative meetings." 
+The PDIS team encourages administrative agencies to first disclose the feasible solution scope of the policy. In this way, they have a better chance to deal with the issue and achieve the desired effect of the public. As the administrative agencies and the public have different positions, understandings, and familiarity with policies, it is necessary to find a pragmatic agenda direction that is taken into account by all parties. Because if the proposal is too far away from reality, or if it is implemented only in accordance with the literal recommendations of the public, it may face short-term obstacles and difficulties, and the scope of the solution will not significantly improve the issue itself.
+
+In summary, the PDIS team implements the "open government" business. In the implementation process of the open government, it must pay attention to the original intention of the people's proposal. In addition to playing a more neutral role (relative to the main ministry) in the presiding process, it must also from the perspective of the executive, the public sector is convinced that "citizen participation" is not so far away from them, and "cooperative meetings" are a dialog platform for mutual understanding, rather than a role that is only one-sided and passively accepting needs.
+
+Breaking away from the dichotomy between the public and the government of the proposal, if it is expected that the discussion results of the collaborative meeting can become the direction of policy participation, the alignment of internal positions of the agency and the scope of the solution are inherently necessary. Many constructive opinions and solutions are the effects that collaborative meetings trying to promote.
+
+From the proposal of the people, the space for discussion was started, and then the administrative organs thought about the setting of a meeting, until the on-site opinions were run in. This cross-sectoral process that enabled participants to “discover” together an unsatisfactory but acceptable solution is, to me, one of the most interesting and unique aspects of PDIS "collaborative meetings" that sets it apart from other "citizen participation" or "deliberative meetings".
