--- a/_i18n/en/_posts/2019-12-15-我的「法官」初體驗.md
+++ b/_i18n/en/_posts/2019-12-15-我的「法官」初體驗.md
@@ -1,25 +1,24 @@
 ---
   layout: "post"
-  title: "Apple Column: My First Judge Experience"
-  excerpt: "The highlight is a classmate of Class 9 of Lan Ya Junior High School and a mock court organized by colleagues from Shihlin Institute."
+  title: "My first “judge” experience"
+  excerpt: "The highlight was a mock court held by classmates from the 9th class of the Lanya Junior High School and staff members from the Shilin District Court."
   image: "https://talk.pdis.nat.gov.tw/uploads/default/original/2X/0/0a7b70bfdaf3a3ad2ee76bf8d676d5d49cf67723.jpeg"
-  author: "唐鳳、黃子維"
+  author: "Audrey Tang, Zach Huang"
   category: "blog"
   tags: 
-    - "開放政府"
+    - "Open Government"
 ---
 
+👩🏻‍⚖️ On the morning of December 11th, the Shilin District Court held a "Let's Go To Court" event. The highlight was a mock court held by classmates from the 9th class of the Lanya Junior High School and staff members from the Shilin District Court. As for me, I was being the judge of this "trial” remotely, but in real time. 
 
- 👩🏻‍ 上午 ️ In the morning of December 11th, Shilin District Court held the “Funny Circle” event. The highlight was a mock court held by classmates from Class 9 of Lan Ya Junior High School and colleagues from Shilindi Academy. Act as the judge of this "trial" through real-time distance. 
+⚖️ In order to let the people understand the justice system, and to show how technology can improve the efficiency of the judicial system and reduce the cost and threshold of using judicial resources, the Shilin District Court combines the off-site teaching of Lanya Junior High School. Through a full day of visits, interaction, and practical work, let students and teachers have the first-hand experience in the feeling of “participating in justice”, and deliberate on how to further “open and transparent justice” and “justice close to the people”. These are exactly the goals as the result of the 2017 “National Congress of Judicial Reform”.
 
- ⚖️ In order to let the people understand the justice, and to show how technology can improve the effectiveness of the judicial system, reduce the cost and threshold of using judicial resources, Shihlin Institute combines the off-school teaching of Lan Ya Intermediate School. Through a full day of visits, Interaction and implementation, let students and teachers experience first-hand the feeling of “participating in justice”, and think about “open and transparent justice” and “close to the people ’s justice”. What are the elements? These are exactly the 2017 “Divisional Reforms” China is the goal promoted by the resolution. 
+🏫 The court where I participated in the "trial” was just a simulation, but all the details were complete, which is exactly like a proper court. The presiding judge is Judge Jiang Zhewei, who is a real judge from the Shilin District Court, and the accompanying judge is Mr. Wu from the Lanya Junior High School. Through the video robot on the judge's seat and wearing a robe, I am a remote judge. Classmates from the the Lanya Junior High School together with judges from other Shihlin courts acted as prosecutors, defenders, defendants, informants, witnesses, bailiffs, and more.
 
- 🏫 Although I participated in the "trial" court, although it is only a simulation, all the details are all in place, which is exactly like the normal court operation. The presiding judge is Judge Jiang Zhewei from Shilindi Court, and the accompanying judge is Mr. Wu from Lan Yaguo Middle School. Through the video robot on the judge's seat and wearing a robe, I am a remote judge. Lan Ya Guozhong's classmates, together with judges from other Shihlin courts, acted as prosecutors, defenders, defendants, informants, witnesses, bailiffs, and so on. 
+💬 Routine judicial procedures, such as case statement, cross-examination, prompting of testimony, judge's review, and sentencing, are all carried out step by step. During the two-hour hearing, the court's operation was shown in detail.
+ 
+💻 During the review process, the Division of Justice's "Sentencing Trend Suggestion System" was used. Judge Jiang also demonstrated its operation on the spot. Its main function is to integrate the content of tens of thousands of rulings into a database and target different crime scenarios and constituent elements. This will not only help a judge in sentencing, but anyone who is curious or has doubts about sentencing can enter relevant parameters on the system, such as the alcohol exhalation concentration of drunk driving, or the type of transportation, then the recommended sentencing reference range will be displayed.
 
- 💬 Routine judicial procedures such as case statement, cross-examination, reminder testimony, judge review, and sentencing are all carried out step by step. During the two-hour hearing, the actual situation of the court's operation was presented in detail. 
+💁 Based on this system, my colleagues in the Information Division of the Court of Justice this year teamed up with civilian information experts to participate in this year's "Presidential Cup Hackathon" competition. The new version of the system produced can directly read judgments through artificial intelligence, and can get sentencing suggestions without having to enter individual parameters. This proposal has also been selected as one of this year's outstanding team.
 
- 💻 The review process used the "Sentencing Trend Suggestion System" of the court of justice. Judge Jiang also demonstrated its operation on the spot. Its main function is to integrate the content of tens of thousands of rulings into a database and target different Summarize the crime and the elements. Not only a judge's aid in sentencing, anyone who is curious or has doubts about sentencing can enter relevant parameters on the system, such as the alcohol exhalation concentration of a drunk driving, or the type of transportation. Recommended sentencing reference range. 
-
- 💁 On the basis of this system, my colleagues in the Information Division of the Court of Justice this year teamed up with civilian information experts to participate in this year's "Presidential Cup Hackathon" contest. The new version of the system was produced through artificial intelligence. You can read the ruling directly, and you don't need to input individual parameters to get the sentencing suggestions. This proposal was also selected as one of the outstanding teams this year. 
-
- 🗺 ️ The sentencing information system and the "Funny Circle" activity with the Shilindi Court aims to create a justice that the people are willing to get close to. This is consistent with the concept of "open government", that is, the use of transparency and participation to build mutual trust. And in the process of service design, how to balance justice, quality and efficiency? The answer is in "[Government Digital Services Guidelines](https://www.ndc.gov.tw/content_list.aspx?n=e7f6c261a5f5d9f5)". 
+🗺️ The sentencing information system and the Shilin District Court's "Let's Go To Court" event are aimed at creating a justice system that people are willing to get close to. This is consistent with the concept of "open government", that is, the use of transparency and participation to build mutual trust. And in the process of service design, how to balance justice, quality and efficiency? The answer lies in the [Government Digital Services Guidelines](https://www.ndc.gov.tw/en/Content_List.aspx?n=E35FD251AA134CA4).
